--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "dotenv": "^16.0.2",
     "expo": "~46.0.9",
+    "expo-checkbox": "~2.2.0",
+    "expo-constants": "~13.2.4",
+    "expo-linking": "~3.2.2",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.9.4",
+    "formik": "^2.2.9",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4"
   },
   "private": true
 }
