--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/native-stack": "6.6.1",
+    "@react-navigation/stack": "6.2.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "expo": "~46.0.9",
     "expo-checkbox": "~2.2.0",
-    "expo-constants": "~13.2.4",
     "expo-linking": "~3.2.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.4",
@@ -24,6 +26,8 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
